Resolving the bucket error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,15 +61,8 @@ jobs:
             - name: Deploy SAM application
               run: |
                   sam deploy \
-                    --template-file packaged.yaml \
+                    --template-file $TEMPLATE_FILE \
                     --stack-name $STACK_NAME \
+                    --resolve-s3 \
                     --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM \
-                    --region $AWS_REGION \
-                    --no-fail-on-empty-changeset
-
-            - name: Debug S3 bucket
-              run: |
-                  echo "Bucket location:"
-                  aws s3api get-bucket-location --bucket $S3_BUCKET
-                  echo "Try listing objects (or confirm permissions):"
-                  aws s3 ls s3://$S3_BUCKET || true
+                    --region $AWS_REGION
