--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,4 +59,6 @@ jobs:
                     --stack-name $STACK_NAME \
                     --resolve-s3 \
                     --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM \
-                    --region $AWS_REGION
+                    --region $AWS_REGION \
+                    --no-confirm-changeset \
+                    --no-fail-on-empty-changeset
