--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,8 @@ jobs:
             - name: Build SAM application
               run: sam build --use-container
 
+            - run: npm install -g esbuild
+
             - name: Deploy SAM application
               run: |
                   sam deploy \
